# chatbot_takehome_assessment

./: README.md  pyproject.toml  requirements.txt
app/: main.py
app/llm/: base.py  mock.py
app/memory/: base.py  inmem.py  kv.py
app/rate/: limiter.py
app/retrieval/: bm25.py  retriever.py
app/routes/: chat.py
app/safety/: guard.py
app/schemas/: message.py
app/telemetry/: trace.py
app/tools/: airline_pets.py  registry.py
data/: airline_policies.jsonl
data/docs/: crate_sizes.md  pet_travel_tips.md
tests/fixtures/: minimal.json  qas.jsonl
tests/integration/: chat_end2end_test.py  streaming_test.py
tests/unit/: memory_test.py  rate_test.py  retrieval_test.py  safety_test.py  tools_test.py
