[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot_takehome_py"
version = "0.1.0"
description = "Chatbot take-home with FastAPI and pytest"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
